# fail_importing

./: LICENSE.txt  README.rst  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  publish.yml
fail_importing/: __init__.py
patch_import/: __init__.py
tests/: tests.py
tests/modules/: redirect.py
tests/modules/inner/: inner.py
