[metadata]
name = fail_importing
description = A decorator designed to make testing optional dependencies painless.
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/Tom01098/fail_importing
author = Tom Humphreys
author_email = Tom01098Code@gmail.com
license = MIT
license_file = LICENSE.txt
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Testing :: Unit
project_urls =
    Repo = https://github.com/Tom01098/fail_importing
    Issues = https://github.com/Tom01098/fail_importing/issues

[options]
packages = fail_importing
python_requires = >=3.6
